# EpiScopeEnvigado

./: .gitignore  Makefile  README.md  pyproject.toml
data/processed/: analisis_coocurrencias_significativas.xlsx  consolidado_por_usuario_3dig_enriquecido.xlsx  consolidado_por_usuario_4dig.xlsx  frecuencia_diagnosticos_CIE4.xlsx
data/raw/: TablaReferencia_CIE10.xlsx  ~$RIPS_20232024_HOSP.xlsx
docs/: mkdocs.yml
docs/docs/: index.md
episcopeenvigado/: __init__.py  app.py  dataset.py  diagnosticoOp.py  features.py  plots.py  reddx.py
episcopeenvigado/etl_modules/: extractor_data.py  load_data.py  transform_data.py  unificar_tablas.py
episcopeenvigado/modeling/: predict.py  train.py
notebooks/: CargaDatos.ipynb  GraficosDesc.ipynb  ValidacionCruzada_BusquedaGrilla.ipynb
streamlit_app/: Analisis_Regresion_Estancia.ipynb  Regresion_Log_dx.py  analisis_estancia.py  analisis_estancia_random.py  main_app.py  stream_app.py  utils_sidebar.py
streamlit_app/pages/: 1_🏠_Home.py  2_🔍_Analisis_Exploratorio.py  3_📈_Analisis_Estancia.py  4_🤖_Analisis_RandomForest.py  5_🌐_Coocurrencias_Diagnosticas.py  6_🧠_Regresion_Logistica_Diagnosticos.py  modelo_predictivo.py
